--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ doc/
 .DS_Store
 .idea
 
-#Ignore paperclip uploaded files
+# Ignore paperclip uploaded files
 /public/system
+
+# Ignore sample images
+/sampleimages
